# RedBlackTree-Animator

./: .gitignore  CMakeLists.txt  RBTree.cpp  RBTree.h  README.md  main.cpp
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RedBlackTree-Animator.slnx  RedBlackTree-Animator.vcxproj  RedBlackTree-Animator.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/RedBlackTree-Animator.dir/Release/: RedBlackTree-Animator.exe.recipe
build2/RedBlackTree-Animator.dir/Release/RedBlack.3CBADF0B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
